--- a/index.html
+++ b/index.html
@@ -8,8 +8,21 @@
     <meta name="description" content="My Business">
 	<meta name="keywords" content="Hammerhead Heavy Haul, Inc.">
 	<meta name="author" content="Bentley Hamm">
+    <link rel="stylesheet" href="styles.css">
 </head>
-<body>
+<body class="body">
+    <div class="header">
+
+    </div>
+    <div class="example-loads">
+
+    </div>
+    <div class="quote">
+
+    </div>
+    <div class="footer">
+
+    </div>
 
     
 </body>
