Header section setup, now formatting

--- a/index.html
+++ b/index.html
@@ -11,14 +11,32 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body class="body">
-    <div class="header">
-
+    <div class="header-section">
+        <div class="upper-header">
+            <ul>
+                <a class="logo" href="./images/HHHI-logo.jpg"></a>
+                <a href="#">header link 1</a>
+                <a href="#">header link 2</a>
+                <a href="#">header link 3</a>
+            </ul>
+        </div>
+        <div class="main-header">
+            <h1 class="headline">Tribute to a 30 year career</h1>
+            <p class="secondary">
+                Bentley bought his first truck in January 1994. Everyone said <span class="italic">"He wouldn't make it."</span> Grandpa told him <span class="italic">"Kid, it's time to prove them all wrong. I believe in you."</span>
+            </p>
+            <a class="hero-image" href="./images/#"></a>
+        </div>
     </div>
+
+
     <div class="example-loads">
 
     </div>
     <div class="quote">
-
+        <p class="secondary">
+            There is more credit and satisfaction in being a first-rate truck driver than a tenth-rate executive" - B.C. Forbes
+        </p>
     </div>
     <div class="footer">
 
