Header section items in place, now format F/B

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="header-section">
         <div class="upper-header">
             <ul>
-                <a class="logo" href="./images/HHHI-logo.jpg"></a>
+                <img class="logo" src="images/HHHI-logo.jpg" alt="Hammerhead Logo">
                 <a href="#">header link 1</a>
                 <a href="#">header link 2</a>
                 <a href="#">header link 3</a>
@@ -25,7 +25,8 @@
             <p class="secondary">
                 Bentley bought his first truck in January 1994. Everyone said <span class="italic">"He wouldn't make it."</span> Grandpa told him <span class="italic">"Kid, it's time to prove them all wrong. I believe in you."</span>
             </p>
-            <a class="hero-image" href="./images/#"></a>
+            <img class="hero-image" src="images/compressor-1.jpg"></a>
+            <!-- Still need to add a "Sign Up Button"-->
         </div>
     </div>
 
