Forgot the "alt" hero-image

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <p class="secondary">
                 Bentley bought his first truck in January 1994. Everyone said <span class="italic">"He wouldn't make it."</span> Grandpa told him <span class="italic">"Kid, it's time to prove them all wrong. I believe in you."</span>
             </p>
-            <img class="hero-image" src="images/compressor-1.jpg"></a>
+            <img class="hero-image" src="images/compressor-1.jpg" alt="Truck hauling a very big load">
             <!-- Still need to add a "Sign Up Button"-->
         </div>
     </div>
