Bring in images, additions, time to save

--- a/index.html
+++ b/index.html
@@ -30,17 +30,36 @@
         </div>
     </div>
 
-
     <div class="example-loads">
-
+        <h2 class="info">Some of the work I have done.</h2>
+        <img class="load-pic" src="images/bucket-1.jpg" alt="My truck hauling Big Bucket">
+        <img class="load-pic" src="images/bucket-2.jpg" alt="Me standing inside Big Bucket">
+        <img class="load-pic" src="images/bucket-3.jpg" alt="Bucket to be mounted to mine shovel">
+        <img class="load-pic" src="images/shovel.jpg" alt="P&H Boss 4100 Mine Shovel">
+        <img class="load-pic" src="images/compressor-2.jpg" alt="My truck hauling a very long compressor building">
+        <img class="load-pic" src="images/ice-load-1.jpg" alt="My truck hauling a big building on the Ice Road">
+        <img class="load-pic" src="images/797-1.jpg" alt="Cat 797F Rock Truck">
+        <img class="load-pic" src="images/797-axle.jpg" alt="My truck hauling a 797F rear axle">
+        <img class="load-pic" src="images/797-kw.jpg" alt="My truck beside a Cat 797F without dump box">
+        <h2 class="info">Some of the unique places I have been.</h2>
+        <img class="location" src="images/gahcho.png" alt="Map, location: Gahcho Kue Mine, NWT">
+        <img class="location" src="images/prudhoe-bay.jpg" alt="Map, location: Prudhoe Bay, AK">
     </div>
     <div class="quote">
         <p>
             There is more credit and satisfaction in being a first-rate truck driver than a tenth-rate executive" - B.C. Forbes
         </p>
     </div>
-    <div class="footer">
 
+    <div class="call-action">
+        <div class="action-box">
+            
+        </div>
+
+    </div>
+
+    <div class="footer">
+        Copyright <i>C</i> Bentley Hamm 2022
     </div>
 
     
