Work done, places been formatted

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <meta name="description" content="My Business">
 	<meta name="keywords" content="Hammerhead Heavy Haul, Inc.">
 	<meta name="author" content="Bentley Hamm">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,500;0,900;1,300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body class="body">
@@ -74,16 +77,20 @@
                 <div class="text">My truck beside a Cat 797F I previously delivered the rear axle for.</div>
             </div>
         </div>
-    </div>
 
         <h2 class="info">Some of the unique places I have been.</h2>
         <div class="places">
-            <img class="location" src="images/gahcho.png" alt="Map, location: Gahcho Kue Mine, NWT">
-            <div class="text">Gahcho Kue mine location. Only accessible by Ice Road...or cargo plane.</div>
-            <img class="location" src="images/prudhoe-bay.jpg" alt="Map, location: Prudhoe Bay, AK">
-            <div class="text">Prudhoe Bay/Deadhorse, AK.</div>
+            <div class="place-1">    
+                <img class="location" src="images/gahcho.png" alt="Map, location: Gahcho Kue Mine, NWT">
+                <div class="text">Gahcho Kue mine location. Only accessible by Ice Road...or cargo plane.</div>
+            </div>
+            <div class="place-2">    
+                <img class="location" src="images/prudhoe-bay.jpg" alt="Map, location: Prudhoe Bay, AK">
+                <div class="text">Prudhoe Bay/Deadhorse, AK.</div>
+            </div>
         </div>
     </div>
+</div>
 
     <div class="quote">
         <p>
@@ -100,10 +107,10 @@
     </div>
 
     <div class="footer">
-        Cat 797F image courtesy of Caterpillar<br>
-        All other images courtesy Hammerhead Heavy Haul, Inc.<br>
+        Cat 797F image © Caterpillar<br>
+        All other images © Hammerhead Heavy Haul, Inc.<br>
         <br>
-        Copyright <i>C</i> Bentley Hamm 2022
+        Copyright © Bentley Hamm 2022
     </div>
 
     
