Header > upper section struggling...

--- a/index.html
+++ b/index.html
@@ -9,18 +9,19 @@
 	<meta name="keywords" content="Hammerhead Heavy Haul, Inc.">
 	<meta name="author" content="Bentley Hamm">
     <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,500;0,900;1,300&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,500;0,900;1,300;1,500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body class="body">
     <div class="header-section">
         <div class="upper-header">
             <ul>
-                <img class="logo" src="images/HHHI-logo.jpg" alt="Hammerhead Logo">
-                <a href="#">header link 1</a>
-                <a href="#">header link 2</a>
-                <a href="#">header link 3</a>
+                <div><img class="logo" src="images/HHHI-logo.jpg" alt="Hammerhead Logo"></div>
+                <div><a href="#">header link 1</a></div>
+                <div><a href="#">header link 2</a></div>
+                <div><a href="#">header link 3</a></div>
             </ul>
         </div>
         <div class="main-header">
@@ -101,7 +102,12 @@
 
     <div class="call-action">
         <div class="action-box">
-            
+            <p>
+            Call to action - Placeholder
+            <br>
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iusto harum doloribus perferendis vero officiis debitis quibusdam molestias dolorem nobis, porro eveniet reiciendis perspiciatis, non omnis! Porro doloribus itaque sequi earum.
+
+        </p>
         </div>
 
     </div>
