Main Header and Action Box

--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
 	<meta name="keywords" content="Hammerhead Heavy Haul, Inc.">
 	<meta name="author" content="Bentley Hamm">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,500;0,900;1,300;1,500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
@@ -19,18 +18,23 @@
         <div class="upper-header">
             <ul>
                 <div><img class="logo" src="images/HHHI-logo.jpg" alt="Hammerhead Logo"></div>
-                <div><a href="#">header link 1</a></div>
-                <div><a href="#">header link 2</a></div>
-                <div><a href="#">header link 3</a></div>
+                <div><a href="#">History</a></div>
+                <div><a href="#">Location</a></div>
+                <div><a href="#">Contact Us</a></div>
             </ul>
         </div>
         <div class="main-header">
-            <h1 class="headline">Tribute to a 30 year career</h1>
-            <p class="secondary">
-                Bentley bought his first truck in January 1994. Everyone said <span class="italic">"He wouldn't make it."</span> Grandpa told him <span class="italic">"Kid, it's time to prove them all wrong. I believe in you."</span>
-            </p>
-            <img class="hero-image" src="images/compressor-1.jpg" alt="Truck hauling a very big load">
-            <!-- Still need to add a "Sign Up Button"-->
+            <div class="article">
+                <h1 class="headline">Reflections of a 30 year career</h1>
+                <p class="secondary">
+                    Bentley bought his first truck in January 1994. Everyone said <span class="italic">"He wouldn't make it."</span> Grandpa told him <span class="italic">"Kid, I believe in you! It's time to prove them all wrong."</span>
+                </p>
+                <!-- Still need to add a "Sign Up Button"-->
+                <input class="btn-styled" type="button" value="Rate Quote">
+            </div>
+                <img class="hero-image" src="images/compressor-1.jpg" alt="Truck hauling a very big load">
+                
+            </div>
         </div>
     </div>
 
@@ -102,12 +106,14 @@
 
     <div class="call-action">
         <div class="action-box">
-            <p>
-            Call to action - Placeholder
-            <br>
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iusto harum doloribus perferendis vero officiis debitis quibusdam molestias dolorem nobis, porro eveniet reiciendis perspiciatis, non omnis! Porro doloribus itaque sequi earum.
-
-        </p>
+            <input class="btn-styled" type="button" value="Join Now">
+            <p class="secondary">
+                After 30 years on the road, it's time to come home. 
+            </p>
+            <p class="light-italic">    
+                Bentley is launching a YouTube channel and blog documenting his journey soon, join the email list so you can follow along as he learns a new skill-set as a Software Developer.
+            </p>
+            
         </div>
 
     </div>
