Work & Places section, text centered

--- a/index.html
+++ b/index.html
@@ -41,23 +41,23 @@
     <div class="info-section">
         <h2 class="info">Some of the work I have done.</h2>
         <div class="example-loads">
-            <div class="load-1">
+            <div class="load">
                 <img class="load-pic" src="images/bucket-1.jpg" alt="My truck hauling Big Bucket">
                 <div class="text">Bucket for a P&H Boss 4100 shovel.</div>
             </div> 
-            <div class="load-2">
+            <div class="load">
                 <img class="load-pic" src="images/bucket-2.jpg" alt="Me standing inside Big Bucket">
                 <div class="text">Me standing inside a 4100 bucket. They're bigger than they look, 58yd capacity.</div>
             </div>
-            <div class="load-3">
+            <div class="load">
                 <img class="load-pic" src="images/bucket-3.jpg" alt="Bucket to be mounted to mine shovel">
                 <div class="text">A bucket, handle that it attaches to, and the door.</div>
             </div>
-            <div class="load 4">    
+            <div class="load">    
                 <img class="load-pic" src="images/shovel.jpg" alt="P&H Boss 4100 Mine Shovel">
                 <div class="text">A P&H Boss 4100 being assembled, this is what the bucket is for.</div>
             </div>
-            <div class="load 5">    
+            <div class="load">    
                 <img class="load-pic" src="images/counterweight.jpg" alt="My truck hauling a counterweight box">
                 <div class="text">This is the counterweight box for a P&H Boss 4100.</div>
             </div>
@@ -65,19 +65,19 @@
                 <img class="load-pic" src="images/compressor-2.jpg" alt="My truck hauling a very long compressor building">
                 <div class="text">Natural gas compressor building. 127' overall length.</div>
             </div>
-            <div class="load-7">
+            <div class="load">
                 <img class="load-pic" src="images/ice-load-1.jpg" alt="My truck hauling a big building on the Ice Road">
                 <div class="text">One of the many loads I moved from Yellowknife across the Ice Roads into the Gahcho Kue mine.</div>
             </div>
-            <div class="load-8">
+            <div class="load">
                 <img class="load-pic" src="images/797-1.jpg" alt="Cat 797F Rock Truck">
                 <div class="text">Caterpillar 797F Rock Truck.</div>
             </div>
-            <div class="load-8">
+            <div class="load">
                 <img class="load-pic" src="images/797-axle.jpg" alt="My truck hauling a 797F rear axle">
                 <div class="text">Rear axle assembly for a Cat 797F Rock Truck.</div>
             </div>
-            <div class="load-10">
+            <div class="load">
                 <img class="load-pic" src="images/797-kw.jpg" alt="My truck beside a Cat 797F without dump box">
                 <div class="text">My truck beside a Cat 797F I previously delivered the rear axle for.</div>
             </div>
@@ -85,11 +85,11 @@
 
         <h2 class="info">Some of the unique places I have been.</h2>
         <div class="places">
-            <div class="place-1">    
+            <div class="place">    
                 <img class="location" src="images/gahcho.png" alt="Map, location: Gahcho Kue Mine, NWT">
                 <div class="text">Gahcho Kue mine location. Only accessible by Ice Road...or cargo plane.</div>
             </div>
-            <div class="place-2">    
+            <div class="place">    
                 <img class="location" src="images/prudhoe-bay.jpg" alt="Map, location: Prudhoe Bay, AK">
                 <div class="text">Prudhoe Bay/Deadhorse, AK.</div>
             </div>
