Cannot get upper header alignment

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
     <div class="info-section">
         <h2 class="info">Some of the work I have done.</h2>
-        <div class="example-loads">
+        <div class="example-work">
             <div class="load">
                 <img class="load-pic" src="images/bucket-1.jpg" alt="My truck hauling Big Bucket">
                 <div class="text">Bucket for a P&H Boss 4100 shovel.</div>
@@ -84,7 +84,7 @@
         </div>
 
         <h2 class="info">Some of the unique places I have been.</h2>
-        <div class="places">
+        <div class="been">
             <div class="place">    
                 <img class="location" src="images/gahcho.png" alt="Map, location: Gahcho Kue Mine, NWT">
                 <div class="text">Gahcho Kue mine location. Only accessible by Ice Road...or cargo plane.</div>
