--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
 </head>
 <body class="body">
     <div class="header-section">
-        <div class="upper-header">
+        <nav>
             <ul>
-                <div><img class="logo" src="images/HHHI-logo.jpg" alt="Hammerhead Logo"></div>
-                <div><a href="#">History</a></div>
-                <div><a href="#">Location</a></div>
-                <div><a href="#">Contact Us</a></div>
+                <li><img class="logo" src="images/HHHI-logo.jpg" alt="Hammerhead Logo"></li>
+                <li class="push"><a href="#">History</a></li>
+                <li><a href="#">Location</a></li>
+                <li><a href="#">Contact Us</a></li>
             </ul>
-        </div>
+        </nav>
         <div class="main-header">
             <div class="article">
                 <h1 class="headline">Reflections of a 30 year career</h1>
