Note to my Grandpa

--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
                 <h1 class="headline">Reflections of a 30 year career</h1>
                 <p class="secondary">
                     Bentley bought his first truck in January 1994. Everyone said <span class="italic">"He wouldn't make it."</span> Grandpa told him <span class="italic">"Kid, I believe in you! It's time to prove them all wrong."</span>
+                    <br>
+                    <span class="light-italic">I hope I made you proud Grandpa!</span>
                 </p>
                 <!-- Still need to add a "Sign Up Button"-->
                 <input class="btn-styled" type="button" value="Rate Quote">
